--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,7 @@ button:hover {
     border: 1px solid #ddd;
     background-color: #f9f9f9;
     border-radius: 5px;
+    width: 60%;
 }
 
 button#toggleInfo {
